# rust-site

./: README.md  tailwind.config.js
backend/: Cargo.toml
backend/src/: main.rs
backend/src/handlers/: mod.rs
backend/src/models/: mod.rs
backend/src/routes/: mod.rs
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Calculator.tsx
